<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <item
        android:id="@+id/english"
        android:orderInCategory="100"
        android:title="@string/language_switch_options_menu_language_english"
        app:showAsAction="never"/>
    <item
        android:id="@+id/Chinese"
        android:orderInCategory="100"
        android:title="@string/language_switch_options_menu_language_Chinese"
        app:showAsAction="never"/>

    <item
        android:id="@+id/japanese"
        android:orderInCategory="100"
        android:title="@string/language_switch_options_menu_language_japanese"
        app:showAsAction="never"/>


    <item
        android:id="@+id/french"
        android:orderInCategory="100"
        android:title="@string/language_switch_options_menu_language_french"
        app:showAsAction="never"/>

    <item
        android:id="@+id/german"
        android:orderInCategory="100"
        android:title="@string/language_switch_options_menu_language_german"
        app:showAsAction="never"/>

</menu>